v3.x.y - YYYY-MMM-DD (to be released)
-------------------------------------
 
  - Fix memory leak of RuleMessages objects
    [#2376 - @WGH-, @martinhsv]
  - Produce not-supported error for ctl:forceRequestBodyVariable
    and ctl:auditEngine
    [#2376 - @WGH-, @martinhsv]
  - Implement id ranges for ctl:ruleRemoveTargetById
    [#2110 - @j0k2r, @martinhsv]  
  - Removed unnecessary while processing the transformations.
    [#2368 - @WGH-, @zimmerle]  
  - auditlog: Computes whether or not to save while loading the rules.
    [@zimmerle]
  - actions: Computes Rule association while loading the rules given a
    performance boost on run time.
    [@zimmerle, @martinhsv, @WGH-]
  - Regression: Mark the test as failed in case of segfault.
    [@zimmerle]
  - Replaced t:lowerCase backend for a better performance.
    [@zimmerle]
  - More structured rules dump. Better supporting debugging.
    [@zimmerle]
  - Added the basics for supporting better error/warning handling while
    loading configurations.
    [@zimmerle]
  - IMPORTANT: SecDefaultAction behaves changing: SecDefaultAction specified
    on a child configuration will overwrite the ones specified on the parent;
    Previously it was concatenating.
    [@zimmerle]
  - Using std::shared_ptr instead of generates its own references counters
    for Rules and related.
    [@zimmerle]
  - Better handle shared_pointers on messages aiming for better performance.
    [@zimmerle]
  - Better handle memory usage on transformations aiming for better
    performance.
    [@zimmerle]
  - Coding refactoring on the Rule class. The Rule class is now refactored
    into RuleWithOperator, RuleWithActions, and RuleUnconditional.
  - Fix: FILES variable does not use multipart part name for key
    [Issue #2377 - @martinhsv]
  - EXPERIMENTAL: Add new transformation call phpArgsNames
    [Issue #2387 - @marshal09]
  - Fix: Only delete Multipart tmp files after rules have run
    [Issue #2427 - @martinhsv]