@@ -55,13 +55,16 @@ class GeoLookup {
  private:
     GeoLookup() :
         m_version(NOT_LOADED)
+#if WITH_MAXMIND
+        ,mmdb()
+#endif
 #if WITH_GEOIP
         ,m_gi(NULL)
 #endif
         { }
     ~GeoLookup();
-    GeoLookup(GeoLookup const&);
-    void operator=(GeoLookup const&);
+    GeoLookup(GeoLookup const&) = delete;
+    void operator=(GeoLookup const&) = delete;
 
     GeoLookupVersion m_version;
 #if WITH_MAXMIND
